# protos

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  buf.gen.yaml  buf.yaml  build.mk  common.mk  go.mod  go.sum  repositories.bzl
.github/workflows/: pull-request.yaml  push.yaml
annotations/v1/: sensitive.proto
common/: BUILD.bazel  exception.pb.go  exception.proto  healthcheck.pb.go  healthcheck.proto  healthcheck.swagger.json
common/v1/: exception.proto
connectorhub/: buf.yaml  go.mod  go.sum
connectorhub/annotations/v1/: sensitive.proto
connectorhub/connectors/v1/: activemq.proto  anthropic_claude.proto  auth0.proto  aws_cognito.proto  aws_dynamodb.proto  aws_polly.proto  aws_rekognition.proto  aws_s3.proto  aws_sns.proto  aws_sqs.proto  azure_b2c.proto  azure_blob.proto  azure_eventhub.proto  azure_servicebus.proto  box.proto  camunda.proto  celonis.proto  cisl.proto  connector_common.proto  databricks.proto  datadog.proto  discord.proto  docusign.proto  elasticsearch.proto  elevenlabs.proto  email.proto  equifax.proto  gocardless.proto  google_bigquery.proto  google_chat.proto  google_gemini.proto  google_sheets.proto  grafana.proto  grpc.proto  hadoop.proto  hubspot.proto  huggingface_inference.proto  influxdb.proto  invoice_ninja.proto  (+41 more)
connectors/v1/: README.md  activemq.proto  anthropic_claude.proto  auth0.proto  aws_cognito.proto  aws_dynamodb.proto  aws_polly.proto  aws_rekognition.proto  aws_s3.proto  aws_sns.proto  aws_sqs.proto  azure_b2c.proto  azure_blob.proto  azure_eventhub.proto  azure_servicebus.proto  bigquery.proto  box.proto  buf.yaml  camunda.proto  celonis.proto  cisl.proto  connector_common.proto  connectors.proto  databricks.proto  datadog.proto  discord.proto  docusign.proto  elasticsearch.proto  elevenlabs.proto  email.proto  equifax.proto  excel365.proto  gocardless.proto  google_bigquery.proto  google_chat.proto  google_gemini.proto  google_sheets.proto  grafana.proto  grpc.proto  hadoop.proto  (+47 more)
healthcheck/: healthcheck.proto  service.proto
healthcheck/v1/: healthcheck.proto  service.proto
pdfserv/: BUILD.bazel  pdfserv.pb.go  pdfserv.proto  pdfserv.swagger.json  service.pb.go  service.proto  service.swagger.json  service_grpc.pb.go
pdfserv/v1/: pdfserv.proto  service.proto
rules/: defs.bzl
(+1 files in other folders)
