load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:rules/defs.bzl", "update_generated_code")

proto_library(
    name = "common_proto",
    srcs = [
        "exception.proto",
        "healthcheck.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "common_go_proto",
    importpath = "github.com/luthersystems/protos/common",
    proto = ":common_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "common",
    embed = [":common_go_proto"],
    importpath = "github.com/luthersystems/protos/common",
    visibility = ["//visibility:public"],
)

update_generated_code(
    name = "update",
    srcs = [":common"],
)
