load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:rules/defs.bzl", "update_generated_code")

proto_library(
    name = "pdfserv_proto",
    srcs = [
        "pdfserv.proto",
        "service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//common:common_proto"],
)

go_proto_library(
    name = "pdfserv_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/luthersystems/protos/pdfserv",
    proto = ":pdfserv_proto",
    visibility = ["//visibility:public"],
    deps = ["//common"],
)

go_library(
    name = "pdfserv",
    embed = [":pdfserv_go_proto"],
    importpath = "github.com/luthersystems/protos/pdfserv",
    visibility = ["//visibility:public"],
)

update_generated_code(
    name = "update",
    srcs = [":pdfserv_go_proto"],
)
